individual-clusters/clusters/alex/mznt-home1/cluster/harvester-ingress-override.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.disabled: 'true' # force disable Traefik for this Ingress
  name: rancher-expose
  namespace: cattle-system
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: rancher
                port:
                  number: 80
            path: /
            pathType: Prefix
